...
  // }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Screen A'),
        actions: [
          IconButton(
            icon: const Icon(Icons.ads_click),
            onPressed: showAppOpenAd,
          ),
        ],
...
